--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Jeumx Tool</title>
 <scrupt type='text/javascript'>
-document.location=https://jeumxtool.herokuapp.com/index.html;
+document.location='https://jeumxtool.herokuapp.com/index.html';
 </script>
 
 <body>
