--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Jeumx Tool</title>
-<scrupt type='text/javascript'>
+<script type='text/javascript'>
 document.location='https://jeumxtool.herokuapp.com/index.html';
 </script>
 
